TAG: lib_py_report-2-0-0
DATE: 11/06/2001
STAFF: lec
RELEASE: A
CHANGES: TR 3085; updated copyright

TAG: lib_py_report-1-0-6
DATE: 06/14/2000
STAFF: lec
RELEASE: A
CHANGES: no need to import "db"

TAG: lib_py_report-1-0-5
DATE: 05/03/2000
STAFF: lec
RELEASE: A
CHANGES: created close_accession_anchor and create_accession_anchor

TAG: lib_py_report-1-0-4
DATE: 04/24/2000
STAFF: lec
RELEASE: A
CHANGES: default outputfile directory is cwd

TAG: lib_py_report-1-0-3
DATE: 04/05/2000
STAFF: lec
RELEASE: A
CHANGES: replaced REPORTDIR w/ HOME

TAG: lib_py_report-1-0-2
DATE: 04/03/2000
STAFF: lec
RELEASE: A
CHANGES: moved process_ref elsewhere

TAG: lib_py_report-1-0-1
DATE: 04/03/2000
STAFF: lec
RELEASE: A
CHANGES: New CVS repository

TAG: lib_py_report-1-0-0
DATE: 04/03/2000
STAFF: lec
RELEASE: A
CHANGES: New CVS repository
