@@ -1,3 +1,9 @@
+TAG: lib_py_report-2-0-1
+DATE: 04/24/2002
+STAFF: lec
+RELEASE: A
+CHANGES: TR 3623; added fileExt to init()
+
 TAG: lib_py_report-2-0-0
 DATE: 11/06/2001
 STAFF: lec
